--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo:               'assets/img/logo.png'
 background:         'assets/img/jupiterjuno.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://jdrosent.github.io/Moon
+url:                https://jdrosenthal.com
 
 # Jekyll
 permalink:          /:title/
