--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://jdrosenthal.com #http://localhost:4000 
+url:                http://localhost:4000 #https://jdrosenthal.com
 
 # Jekyll
 permalink:          /:title/
