--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo:               'assets/img/logo.png'
 background:         'assets/img/jupiterjuno.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://jdrosenthal.com
+url:                jdrosenthal.com
 
 # Jekyll
 permalink:          /:title/
@@ -37,20 +37,20 @@ disqus_shortname:   jdrosent
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:
-twitter:            username
-facebook:           username
-github-url:         username
+email:              jamesdrosenthal@gmail.com
+#twitter:            username
+facebook:           james.rosenthal.10
+github-url:         jdrosent
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-#linkedin:          username
+linkedin:           jamesdrosenthal
 #xing:              username
-instagram:          username
+instagram:          jamesdkj
 #lastfm:            username
 #tumblr:            username
 #medium:            '@username'
 #pinterest:         username
 #foursquare:        username
-steam:              username
+#steam:              username
 #dribbble:          username
 #youtube:           username
 #youtube-channel:   channel
