--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@ description:        "PhD Student, Electrical Engineer, NSF Graduate Research Fel
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
-background:         'assets/img/placeholder-big.jpg'
+background:         'assets/img/placeholder-big.png'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                jdrosenthal.com
+#url:                http://localhost:4000
 
 
 # Jekyll
