--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              James Rosenthal
-bio:                '"If you wish to make an apple pie from scratch, <br> you must first invent the universe."'
+bio:                '"To make an apple pie from scratch, <br> you must first invent the universe."'
 description:        'PhD Student, Electrical Engineer, NSF Graduate Research Fellow'
 reading_time:       true
 words_per_minute:   200
