--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              James Rosenthal
 bio:                '"To make an apple pie from scratch, <br> you must first invent the universe."'
-description:        'PhD Student, Electrical Engineer, NSF Graduate Research Fellow'
+description:        'PhD student in Electrical Engineering'
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
